FDO-48 Dropbox integration

--- a/src/app/browse/adhoc/less/adhoc.less
+++ b/src/app/browse/adhoc/less/adhoc.less
@@ -18,3 +18,16 @@
     margin-bottom:30px;
   }
 }
+
+.browse-dropbox > div {
+  flex-flow:column nowrap;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  height:100%
+}
+
+.browse-dropbox i {
+  font-size: 10em;
+  line-height:80%
+}
