--- a/src/app/browse/adhoc/templates/adhoc.tpl.html
+++ b/src/app/browse/adhoc/templates/adhoc.tpl.html
@@ -24,6 +24,14 @@
                     <span><i class="fa fa-plus-circle"></i> Upload New Document</span>
                 </div>
             </div>
+            <div class="col-md-3">
+                <div class="product-item new-document-upload browse-dropbox" ng-click="adhoc.browseDropbox()">
+                    <div>
+                        <p>Browse Dropbox</p>
+                        <i class="fa fa-dropbox fa-5x"></i>
+                    </div>
+                </div>
+            </div>
         </div>
         <h3 class="page-header">
             Posters and Standing Banners
