Documents work complete

--- a/src/app/browse/workbooks/templates/workbooks.tpl.html
+++ b/src/app/browse/workbooks/templates/workbooks.tpl.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="product-item new-document-upload browse-dropbox" ng-click="workbooks.browseDropbox()">
+                <div class="product-item new-document-upload browse-dropbox dropbox-blue" ng-click="workbooks.browseDropbox()">
                     <div>
                         <p>Browse Dropbox</p>
                         <i class="fa fa-dropbox fa-5x"></i>
