--- a/src/app/base/templates/base.left.fedex.tpl.html
+++ b/src/app/base/templates/base.left.fedex.tpl.html
@@ -9,7 +9,7 @@
     <nav>
         <ul class="nav nav-pills nav-stacked">
             <li role="presentation" ng-repeat="category in baseLeft.categories.Items" ui-sref-active="active">
-                <a href="" ui-sref="{{category.ID}}">{{category.Name}}</a>
+                <a href="" ui-sref="{{category.ID}}" ui-sref-opts="{reload:true}">{{category.Name}}</a>
             </li>
         </ul>
     </nav>
