--- a/src/app/variables.less
+++ b/src/app/variables.less
@@ -6,6 +6,8 @@
 @four51-orange: #FF5F32;
 @brand-primary: @four51-blue;
 
+@dropbox-blue: #017EE6;
+
 //Interconnected table color styles
 @table-bg:white;
 @table-bg-accent:darken(@table-bg, 5);
