--- a/src/app/browse/documents/templates/documents.new.document.tpl.html
+++ b/src/app/browse/documents/templates/documents.new.document.tpl.html
@@ -9,7 +9,7 @@
                 <input id="productNameInput" type="text" class="form-control" ng-model="documentsNewDocument.newDocument.Name" ng-required="true"/>
             </div>
             <div class="form-group col-sm-4">
-                <ordercloud-file-upload model="documentsNewDocument.newDocument" keyname="document" label="Document" extensions="doc, pptx, docx, ppt" invalid-extension="jpg"></ordercloud-file-upload>
+                <ordercloud-file-upload model="documentsNewDocument.newDocument" keyname="document" label="Document" extensions="doc, pptx, docx, ppt, pdf" invalid-extension="jpg"></ordercloud-file-upload>
             </div>
             <div class="form-group col-sm-4">
                 <ordercloud-file-upload model="documentsNewDocument.newDocument" keyname="image" label="Image" extensions="jpg, jpeg, png, gif" invalid-extension="x"></ordercloud-file-upload>
