--- a/src/app/cart/templates/cart.tpl.html
+++ b/src/app/cart/templates/cart.tpl.html
@@ -32,7 +32,7 @@
                             </figure>
                         </td>
                         <td>
-                            <a href="#">{{lineItem.Product.Name}}</a><br>
+                            <a href="#">{{lineItem.Product.Name | productTypes}}</a><br>
                             <small class="text-muted">{{lineItem.ProductID}}</small>
                         </td>
                         <td>
