--- a/src/app/browse/workbooks/templates/workbooks.new.workbook.tpl.html
+++ b/src/app/browse/workbooks/templates/workbooks.new.workbook.tpl.html
@@ -9,7 +9,7 @@
                 <input id="productNameInput" type="text" class="form-control" ng-model="workbooksNewDocument.newWorkbook.Name" ng-required="true"/>
             </div>
             <div class="form-group col-sm-4">
-                <ordercloud-file-upload model="workbooksNewDocument.newWorkbook" keyname="document" label="Workbook" extensions="doc, pptx" invalid-extension="jpg"></ordercloud-file-upload>
+                <ordercloud-file-upload model="workbooksNewDocument.newWorkbook" keyname="document" label="Workbook" extensions="doc, docx, ppt, pptx" invalid-extension="jpg"></ordercloud-file-upload>
             </div>
             <div class="form-group col-sm-4">
                 <ordercloud-file-upload model="workbooksNewDocument.newWorkbook" keyname="image" label="Image" extensions="jpg, jpeg, png, gif" invalid-extension="x"></ordercloud-file-upload>
