--- a/src/app/browse/workbooks/templates/workbooks.tpl.html
+++ b/src/app/browse/workbooks/templates/workbooks.tpl.html
@@ -24,14 +24,14 @@
                     <span><i class="fa fa-plus-circle"></i> Upload New Workbook</span>
                 </div>
             </div>
-            <div class="col-md-3">
+            <!--<div class="col-md-3">
                 <div class="product-item new-document-upload browse-dropbox dropbox-blue" ng-click="workbooks.browseDropbox()">
                     <div>
                         <p>Browse Dropbox</p>
                         <i class="fa fa-dropbox fa-5x"></i>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
         <h3 class="page-header">
             Posters and Standing Banners
