--- a/src/app/browse/workbooks/templates/workbooks.workbook.tpl.html
+++ b/src/app/browse/workbooks/templates/workbooks.workbook.tpl.html
@@ -1,6 +1,25 @@
+<div class="row bs-wizard" style="border-bottom:0;">
+    <div class="col-xs-4 bs-wizard-step complete">
+        <div class="text-center bs-wizard-stepnum"><b>Upload/Select Files</b></div>
+        <div class="progress"><div class="progress-bar"></div></div>
+        <a href="#" class="bs-wizard-dot"></a>
+    </div>
+
+    <div class="col-xs-4 bs-wizard-step complete">
+        <div class="text-center bs-wizard-stepnum"><b>Set Options/Preview</b></div>
+        <div class="progress"><div class="progress-bar"></div></div>
+        <a href="#" class="bs-wizard-dot"></a>
+    </div>
+
+    <div class="col-xs-4 bs-wizard-step disabled">
+        <div class="text-center bs-wizard-stepnum"><b>Add to Cart</b></div>
+        <div class="progress"><div class="progress-bar"></div></div>
+        <a href="#" class="bs-wizard-dot"></a>
+    </div>
+</div>
 <article class="container">
     <div class="text-center">
-        <h3 class="item-name">{{workbooksDocument.product.Name || workbooksDocument.product.ID}}</h3>
+        <h3 class="item-name">{{workbooksDocument.product.Name | productTypes}}</h3>
     </div>
     <div class="row">
         <div class="col-sm-8">
