--- a/src/app/browse/promotional/templates/promotional.product.tpl.html
+++ b/src/app/browse/promotional/templates/promotional.product.tpl.html
@@ -1,3 +1,22 @@
+<div class="row bs-wizard" style="border-bottom:0;">
+    <div class="col-xs-4 bs-wizard-step complete">
+        <div class="text-center bs-wizard-stepnum"><b>Select Product</b></div>
+        <div class="progress"><div class="progress-bar"></div></div>
+        <a href="#" class="bs-wizard-dot"></a>
+    </div>
+
+    <div class="col-xs-4 bs-wizard-step complete">
+        <div class="text-center bs-wizard-stepnum"><b>Set Options</b></div>
+        <div class="progress"><div class="progress-bar"></div></div>
+        <a href="#" class="bs-wizard-dot"></a>
+    </div>
+
+    <div class="col-xs-4 bs-wizard-step disabled">
+        <div class="text-center bs-wizard-stepnum"><b>Add to Cart</b></div>
+        <div class="progress"><div class="progress-bar"></div></div>
+        <a href="#" class="bs-wizard-dot"></a>
+    </div>
+</div>
 <article class="container">
     <div class="text-center">
         <h3 class="item-name">{{promotionalProduct.product.Name || promotionalProduct.product.ID}}</h3>
