--- a/src/app/browse/workbooks/templates/workbooks.tpl.html
+++ b/src/app/browse/workbooks/templates/workbooks.tpl.html
@@ -1,37 +1,50 @@
 <ui-view>
+    <div class="row bs-wizard" style="border-bottom:0;">
+        <div class="col-xs-4 bs-wizard-step complete">
+            <div class="text-center bs-wizard-stepnum"><b>Upload/Select Files</b></div>
+            <div class="progress"><div class="progress-bar"></div></div>
+            <a href="#" class="bs-wizard-dot"></a>
+        </div>
+
+        <div class="col-xs-4 bs-wizard-step disabled">
+            <div class="text-center bs-wizard-stepnum"><b>Set Options/Preview</b></div>
+            <div class="progress"><div class="progress-bar"></div></div>
+            <a href="#" class="bs-wizard-dot"></a>
+        </div>
+
+        <div class="col-xs-4 bs-wizard-step disabled">
+            <div class="text-center bs-wizard-stepnum"><b>Add to Cart</b></div>
+            <div class="progress"><div class="progress-bar"></div></div>
+            <a href="#" class="bs-wizard-dot"></a>
+        </div>
+    </div>
     <article class="container-fluid">
-        <h3 class="page-header">
-            Workbooks
-        </h3>
         <div class="product-list row">
             <div class="col-md-3" ng-repeat="product in workbooks.products | workbookproducttype:'Workbook'">
-                <div class="product-item" ui-sref="workbooks.workbook({productID: product.ID})">
+                <div class="product-item existing-document upload-box" ui-sref="workbooks.workbook({productID: product.ID})">
                     <h3 class="item-name">{{product.Name || product.ID}}</h3>
-                    <div>
-                    <span class="fa-stack fa-5x" ng-if="!product.xp.image">
-                        <i class="fa fa-camera fa-stack-1x"></i>
-                        <i class="fa fa-ban fa-stack-2x text-danger"></i>
-                    </span>
+                    <div style="max-height: 80%; overflow-y:hidden;">
+                        <div class="text-center" ng-if="!product.xp.image">
+                            <i class="fa fa-file-o"></i>
+                        </div>
                         <div ng-if="product.xp.image">
                             <img class="img-responsive" ng-src="{{product.xp.image.URL}}" alt="Product Image">
                         </div>
                     </div>
-                    <div class="item-description" ng-if="product.Description"><p>{{product.Description}}</p></div>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="product-item new-document-upload" ui-sref="workbooks.newWorkbook">
-                    <span><i class="fa fa-plus-circle"></i> Upload New Workbook</span>
-                </div>
-            </div>
-            <!--<div class="col-md-3">
-                <div class="product-item new-document-upload browse-dropbox dropbox-blue" ng-click="workbooks.browseDropbox()">
-                    <div>
-                        <p>Browse Dropbox</p>
-                        <i class="fa fa-dropbox fa-5x"></i>
+                <div class="product-item new-document-upload upload-box">
+                    <div class="text-center">
+                        <i class="fa fa-inbox text-primary"></i>
+                        <p>For best results, upload a high-resolution file.</p>
+                        <p><button type="button" class="btn btn-primary" ng-click="workbooks.uploadDocument()">Upload from your computer</button></p>
+                        <div style="display: none;" id="uploadbutton">
+                            <ordercloud-file-upload model="workbooks.newDocument" keyname="document" label="Document" extensions="pdf, doc, docx, ppt, pptx" invalid-extension="x"></ordercloud-file-upload>
+                        </div>
                     </div>
                 </div>
-            </div>-->
+            </div>
         </div>
         <h3 class="page-header">
             Posters and Standing Banners
