--- a/src/app/base/templates/base.top.tpl.html
+++ b/src/app/base/templates/base.top.tpl.html
@@ -2,8 +2,9 @@
     <div class="link">
         <a ng-click="application.toggleLeftNav()"><i class="fa fa-bars"></i></a>
     </div>
-    <div class="logo">
-        <a href="" ui-sref="home"><ordercloud-logo data-width="60px" data-height="50px" data-color="#333" data-icon="true"></ordercloud-logo></a>
+    <div class="logo text-center">
+        <!--<a href="" ui-sref="home"><ordercloud-logo data-width="60px" data-height="50px" data-color="#333" data-icon="true"></ordercloud-logo></a>-->
+        <img width="77px" height="50px" src="assets/fedex-office-logo.png" />
     </div>
     <div class="link" uib-dropdown>
         <a href uib-dropdown-toggle>
