--- a/src/app/cart/less/cart.less
+++ b/src/app/cart/less/cart.less
@@ -9,3 +9,11 @@
     }
   }
 }
+
+.subtotal-subtext {
+  margin-bottom: 0px !important;
+  font-size: 12px !important;
+  font-weight: normal !important;
+  line-height: 1.4;
+  font-style: italic;
+}
