--- a/src/app/cart/templates/cart.tpl.html
+++ b/src/app/cart/templates/cart.tpl.html
@@ -99,5 +99,5 @@
 
         </div>
     </div>
-    <button type="button" ui-sref="checkout" class="btn btn-success pull-right">Checkout</button>
+    <button type="button" ui-sref="delivery" class="btn btn-success pull-right">Checkout</button>
 </article>
