--- a/src/app/variables.less
+++ b/src/app/variables.less
@@ -1,9 +1,9 @@
 //These are the variables used throughout the application. This is where
 //overwrites that are not specific to components should be maintained.
 
-@four51-blue: #358FCE;
-@four51-navy: #003843;
-@four51-orange: #FF5F32;
+@four51-blue: #414141;
+@four51-navy: #3C4C5B;
+@four51-orange: #EF5F00;
 @brand-primary: @four51-blue;
 
 @dropbox-blue: #017EE6;
