--- a/src/app/base/less/variables.less
+++ b/src/app/base/less/variables.less
@@ -1,3 +1,5 @@
+@dashboard-leftnav-bg: #414141;
+
 @dashboard-leftnav-width: 250px;
 @dashboard-leftnav-bg: darken(@navbar-default-bg, 5);
 @dashboard-leftnav-border:darken(@dashboard-leftnav-bg, 5);
