--- a/src/app/base/templates/base.top.tpl.html
+++ b/src/app/base/templates/base.top.tpl.html
@@ -4,7 +4,7 @@
     </div>
     <div class="logo text-center">
         <!--<a href="" ui-sref="home"><ordercloud-logo data-width="60px" data-height="50px" data-color="#333" data-icon="true"></ordercloud-logo></a>-->
-        <img width="77px" height="50px" src="assets/fedex-office-logo.png" />
+        <img style="height: 35px; width: auto;" src="assets/foxTop.png" />
     </div>
     <div class="link" uib-dropdown>
         <a href uib-dropdown-toggle>
